# Codex-Switch

./: .gitignore  OPENCLAW_MAX_OPTIMIZATION.md  README.md  __replay_log_20260217_202204.txt  bot.ts.remote  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: constants.rs  lib.rs  main.rs  models.rs  paths.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs  runtime_auth_login.inc  runtime_autoswitch.inc  runtime_backup.inc  runtime_ccswitch_db_access.inc  runtime_ccswitch_repo_cache.inc  runtime_ccswitch_skills.inc  runtime_ccswitch_tables.inc  runtime_core.inc  runtime_core.rs  runtime_dashboard_profiles.inc  runtime_editor_ops.inc  runtime_hook_and_paths.inc  runtime_log_tail.inc  runtime_mcp.inc  runtime_opencode_auth.inc  runtime_ops.inc  runtime_quota_cache.inc  runtime_state.inc  runtime_state_db.inc  runtime_store_profiles.inc  skills.rs
src-tauri/src/util/: mod.rs
src-tauri/target-check/: .rustc_info.json
src-tauri/target-check/debug/.fingerprint/adler2-11fcdc20babec40d/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/adler2-a3469f3568e1f292/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/ahash-1319f704249defd5/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-check/debug/.fingerprint/ahash-8713d96d99dee3ad/: run-build-script-build-script-build  run-build-script-build-script-build.json
(+1149 files in other folders)
